force-app/main/default/objects/Content_Intelligence_Features__mdt/fields/EnableAnalyticsSignals__c.field-meta.xml
<CustomField>
    <fullName>EnableAnalyticsSignals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable analytics signals (enrollment counts, completion rates, engagement scores)</description>
    <label>Enable Analytics Signals</label>
    <type>Checkbox</type>
</CustomField>