force-app/main/default/objects/Content_Intelligence_Features__mdt/fields/EnableLifecycleSignals__c.field-meta.xml
<CustomField>
    <fullName>EnableLifecycleSignals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable lifecycle signals to identify content that needs review</description>
    <label>Enable Lifecycle Signals</label>
    <type>Checkbox</type>
</CustomField>