force-app/main/default/objects/Content_Intelligence_Features__mdt/fields/EnablePersonalization__c.field-meta.xml
<CustomField>
    <fullName>EnablePersonalization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable personalization based on user's OU, role, and region</description>
    <label>Enable Personalization</label>
    <type>Checkbox</type>
</CustomField>