force-app/main/default/objects/Content_Intelligence_Features__mdt/fields/EnableQualityChecks__c.field-meta.xml
<CustomField>
    <fullName>EnableQualityChecks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable quality and validity checks for content (broken links, low completion rates, etc.)</description>
    <label>Enable Quality Checks</label>
    <type>Checkbox</type>
</CustomField>