force-app/main/default/objects/Content_Intelligence_Features__mdt/fields/EnableSemanticRanking__c.field-meta.xml
<CustomField>
    <fullName>EnableSemanticRanking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable semantic understanding and ranking beyond keyword matching</description>
    <label>Enable Semantic Ranking</label>
    <type>Checkbox</type>
</CustomField>